--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r3f-vite-starter",
+  "name": "salesbot-web-ui",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,15 +10,9 @@
     "start": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
-    "@react-three/xr": "^5.7.1",
-    "@types/three": "0.152.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1",
-    "three": "0.153.0"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
