--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.93.0",
+    "@react-three/fiber": "^8.15.13",
+    "@react-three/xr": "^5.7.1",
+    "@types/three": "^0.160.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
